--- a/arrasio/src/client/index.html
+++ b/arrasio/src/client/index.html
@@ -217,6 +217,6 @@
     prompt('The game may have crashed, refresh the page to recover from error. If this is a private server, make sure to check the changelog for any server updates. Error information:', e)
   }
   </script>
-  <script src="./bundle.js" defer></script>
+  <script src="./app.js" defer></script>
 </body>
 </html>
